--- a/My Laptop.html
+++ b/My Laptop.html
@@ -20,8 +20,8 @@
 <p>Specs:</p>
 <li>Cpu: Intel(R) Core(TM) i3-7020U 7th Gen and 2.30GHz and a Dual-core (2 Core™)</li>
 <li>Intergrated GPU: Intel® HD Graphics 620</li>
-<li>Ram: 8GB </li>
-<li>Network and Communication/Wireless LAN Standard: IEEE 802.11ac</li>
+<li>Ram: 8GB DDR4 </li>
+<li>Wifi Card: Qualcomm Atheros QCA9377 </li>
 <li> Screen Size: 39.6cm (15.6")</li>
 <li> Screen Resolution: 1920 x 1080</li>
 <li> Storage: 475GB</li>
