--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<head><title>The Bunker is burning</title>
-<link href="style.css" rel="stylesheet" type="text/css" media="all">
-</head>
-<body>
-<header>
-<tr>
-<td><a href="index.html">Home</a></td>
-<td><a href="About.html">About Me</a></td>
-<td><a href="F.html">Friends</a></td>
-<td><a href="blogs.html">Blogs</a></td>
-</tr> 
-</header>
-<hr>
-</nav>
-<table cellspacing="6" cellpadding="6">
-</table>
-</nav>
-<h2>Welcome Kamerad</h2>
-<p>Welcome to my website. Here I will write blogs. I made the website only because of  <a href="http://phrl42.ydns.eu/index.html">phrl42.</a></p>
+<html>
+    <head>
+          <title>Website</title>
+          <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    </head>
+      <body>
+      	<header>
+      		<tr>
+      			<td><a href="index.html">Home</a></td>
+      			<td><a href="About.html">About Me</a></td>
+      			<td><a href="F.html">Friends</td></a>
+      			<td><a href="blogs.html">Blogs</a></td>
+      		</tr>
+      	</header>
+      	<br>
+      	<br>
+      </tr>
+      <nav>
+      	 <table cellspacing="6" cellpadding="6"></table>
+      </nav>
+      <h1>Welcome Kamerad</h1>
+      Welcome to my website. Here I will write blogs. I made the website only because of <a href="http://phrl42.ydns.eu/index.html">phrl42.</a></td>
+      </body>
+</html>
 
