--- a/My Laptop.html
+++ b/My Laptop.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
-<head><title>The Bunker is Cool</title>
-<link href="style.css" rel="stylesheet" type="text/css" media="all">
-</head>
-<body>
-<header>
-</header>
-<hr>
-</nav>
-<table cellspacing="6" cellpadding="6">
-<tr>
-<td><a href="index.html">Home</a></td>
-<td><a href="About.html">About Me</a></td>
-<td><a href="F.html">Friends</a></td>
-<td><a href="blogs.html">Blogs</a></td>
-</tr> 
-</table>
-</nav>
-<h2>My Laptop</h2>
-<p>Specs:</p>
-<li>Cpu: Intel(R) Core(TM) i3-7020U 7th Gen and 2.30GHz and a Dual-core (2 Core™)</li>
-<li>Intergrated GPU: Intel® HD Graphics 620</li>
-<li>Ram: 8GB DDR4 </li>
-<li>Wifi Card: Qualcomm Atheros QCA9377 </li>
-<li> Screen Size: 39.6cm (15.6")</li>
-<li> Screen Resolution: 1920 x 1080</li>
-<li> Storage: 475GB</li>
-<li>Battery Capacity: 4810 mAh</li>
-<li>Height: 20.95mm</li>
-<li>Width: 381.6mm</li>
-<li>Depth: 262.8mm</li>
-<li>Weight: 2.10 kg</li>
-<p></p>
-<p>Model Name: <a href = "https://www.acer.com/ac/en/EE/content/model/NX.H2BEL.003"> Acer Aspire 3</a></p>
-<p>Here are some pictures:</p>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.weh7oVYJXAxIifRI9K7U8wHaFj%26pid%3DApi&f=1" width="300">
-<p></p>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.k9_8bp8Q5K63Ct_p8ZlPSQHaEp%26pid%3DApi&f=1" width="300">
-<p></p>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Vq6Q8xRZAsjM6S-WlhbnCAHaHa%26pid%3DApi&f=1" width="300">
-<p></p>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HjAcm6-nBLtowaxVpMS_TQHaE-%26pid%3DApi&f=1" width="300">
-<p></p>
-<p>My laptop has a different design and it has more storage than the laptop on the Website</p>
-<p>My laptop is fine to me personally, I can play anything I want to play and it's very good.</p>
+<html>
+   <head>
+       <title>Website</title>
+       <link href="style.css" rel="stylesheet" type="text/css" media="all">
+   </head>
+      <body>
+      	<header>
+      		<table cellspacing="6" cellpadding="6">
+      			<tr> 
+      				<td><a href="index.html">Home</a></td>
+      				<td><a href="About.html"> About Me</a></td>
+      				<td><a href="F.html"> Friends</a></td>
+      				<td><a href="blogs.html">Blog</a></td>
+      			</tr>
+      		</table>
+      	<h2>My Laptop</h2>
+      		<p>Specs:</p>
+      	<li>Cpu: Intel(R) Core(TM) i3-7020U 7th Gen and 2.30GHz and a Dual-core (2 Core™)</li>
+        <li>Intergrated GPU: Intel® HD Graphics 620</li>
+        <li>Ram: 8GB DDR4 </li>
+        <li>Wifi Card: Qualcomm Atheros QCA9377 </li>
+        <li> Screen Size: 39.6cm (15.6")</li>
+        <li> Screen Resolution: 1920 x 1080</li>
+        <li> Storage: 475GB</li>
+        <li>Battery Capacity: 4810 mAh</li>
+        <li>Height: 20.95mm</li>
+        <li>Depth: 262.8mm</li>
+        <li>Weight: 2.10 kg</li>
+     <br><br>
+         Modal Name: <a href ="https://www.acer.com/ac/en/EE/content/model/NX.H2BEL.003"> Acer Aspire 3</a>
+         <p>Here are some pictures</p>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.weh7oVYJXAxIifRI9K7U8wHaFj%26pid%3DApi&f=1" width="300">
+      <br><br>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.k9_8bp8Q5K63Ct_p8ZlPSQHaEp%26pid%3DApi&f=1" width="300">
+      <br><br>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Vq6Q8xRZAsjM6S-WlhbnCAHaHa%26pid%3DApi&f=1" width="300">
+      <br></br>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HjAcm6-nBLtowaxVpMS_TQHaE-%26pid%3DApi&f=1" width="300">
+
+         <p>My laptop has a different design and it has more storage than the laptop on the Website</p>
+         <p>My laptop is fine to me personally, I can play anything I want to play and it's very good.</p>
