--- a/blogs.html
+++ b/blogs.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<head><title>Its just your mom cooking </title>
-<link href="style.css" rel="stylesheet" type="text/css" media="all">
-</head>
-<body>
-<header>
-<tr>
-<td><a href="index.html">Home</a></td>
-<td><a href="About.html">About Me</a></td>
-<td><a href="F.html">Friends</a></td>
-<td><a href="blogs.html">Blogs</a></td>
-</tr> 
-</header>
-<hr>
-</nav>
-<table cellspacing="6" cellpadding="6">
-</table>
-</nav>
-<h2>Blogs</h2>
-<p>(29.07.2021)<a href = "My Laptop.html">My Bunker Laptop</a></p>
+<html>
+   <head>
+	  <title>Website</title>
+      <link href="style.css" rel="stylesheet" type="text/css" media="all">
+   </head>
+      <body>
+       <header>
+       	<tr>
+       		<td><a href="index.html">Home</a></td>
+       		<td><a href="About.html">About Me</a></td>
+       		<td><a href="F.html">Friends</a></td>
+            <td><a href="blogs.html">Blogs</a></td>
+        </tr>
+       </header>
+       <table cellspacing="6" cellpadding="6">
+       </table>
+       <h1>Blogs</h1>
+       <p>(29.07.2021)<a href ="My Laptop.html">My Laptop</a></p>
+      </body>
+</html>
