--- a/blogs.html
+++ b/blogs.html
@@ -7,10 +7,10 @@
       <body>
        <header>
        	<tr>
-       		<td><a href="index.html">Home</a></td>
-       		<td><a href="About.html">About Me</a></td>
-       		<td><a href="F.html">Friends</a></td>
-            <td><a href="blogs.html">Blogs</a></td>
+       		<a href="index.html">Home</a>
+       		<a href="About.html">About Me</a>
+       		<a href="F.html">Friends</a>
+            <td><a href="blogs.html">Blogs</a>
         </tr>
        <table cellspacing="6" cellpadding="6">
        </table>
