--- a/My Laptop.html
+++ b/My Laptop.html
@@ -30,10 +30,10 @@
      <br><br>
          Modal Name: <a href ="https://www.acer.com/ac/en/EE/content/model/NX.H2BEL.003" target = blank> Acer Aspire 3</a>
          <p>Here are some pictures</p>
-         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.weh7oVYJXAxIifRI9K7U8wHaFj%26pid%3DApi&f=1" width="300">
-         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.k9_8bp8Q5K63Ct_p8ZlPSQHaEp%26pid%3DApi&f=1" width="300">
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.weh7oVYJXAxIifRI9K7U8wHaFj%26pid%3DApi&f=1" width = 15% height = 15%>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.k9_8bp8Q5K63Ct_p8ZlPSQHaEp%26pid%3DApi&f=1" width = 15% height = 15%>
       <br><br>
-         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Vq6Q8xRZAsjM6S-WlhbnCAHaHa%26pid%3DApi&f=1" width="300">
-         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HjAcm6-nBLtowaxVpMS_TQHaE-%26pid%3DApi&f=1" width="300">
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Vq6Q8xRZAsjM6S-WlhbnCAHaHa%26pid%3DApi&f=1" width = 15% height = 15%>
+         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HjAcm6-nBLtowaxVpMS_TQHaE-%26pid%3DApi&f=1" width = 15% height = 15%>
          <p>My laptop has a different design and it has more storage than the laptop on the Website</p>
          <p>My laptop is fine to me personally, I can play anything I want to play and it's very good.</p>
