--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <hr>
     <nav>
       	 <table cellspacing="6" cellpadding="6"></table>
-      </nav>
+        </table>
+    </nav>
       <h1>Welcome Kamerad</h1>
       Welcome to my website. Here I will write blogs. I made the website only because of <a href="http://phrl42.ydns.eu/index.html" target = blank>phrl42.</a></td>
       </body>
