--- a/F.html
+++ b/F.html
@@ -5,6 +5,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all"> 
 </head>
 <body>
+	<h1>Friends</h1>
     <header>
     	<tr>
     		<td><a href="index.html">Home</a></td>
