--- a/F.html
+++ b/F.html
@@ -19,6 +19,6 @@
 	<p>Take a look at these great websites</p>
        <p><a href="https://rnbunker.neocities.org/" target =blank>rnbunker</p></a>
        <p><a href="https://abbix.me" target=blank>Abbix</a></p>
-       <p><a href="https://phrl42.ydns.eu/" target=blank>phrl42</a></p>
+       <p><a href="http://phrl42.ydns.eu/index.html" target=blank>phrl42</a></p>
 </body>
 </html>
