--- a/About.html
+++ b/About.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<head><title>Help!</title>
-<link href="style.css" rel="stylesheet" type="text/css" media="all">
+<html>
+<head>
+	<link href="style.css" rel="stylesheet" type="text/css" media ="all">
+	<title>Website</title>
 </head>
 <body>
-<header>
-<tr>
-<td><a href="index.html">Home</a></td>
-<td><a href="About.html">About Me</a></td>
-<td><a href="F.html">Friends</a></td>
-<td><a href="blogs.html">Blogs</a></td>
-</tr> 
-</header>
-<hr>
-</nav>
-<table cellspacing="6" cellpadding="6">
-</table>
-</nav>
-<h2>About Me</h2>
-<p>I'm JaLoal and I'm one of million people on the internet. I play a lot of ego shooters like csgo: <a href="https://steamcommunity.com/profiles/76561198997658790/">my steam</a>. Tune into my favorite <a href="http://phrl42.ydns.eu:8000/eurobeat">radio station.</a></p>
+    <header>
+      <tr>
+      	<td><a href="index.html">Home</a></td>
+      	<td><a href="About.html">About Me</a></td>
+        <td><a href="F.html">Friends</a></td>
+        <td><a href="blogs.html">Blogs</a></td>
+      </tr>
+     </header>
+    <hr>
+   <table cellspacing="6" cellpadding="6"></table>
+   </table>
+  <h1>About Me</h1>
+  I'm JaLoal and I'm one of million people on the internet. I play a lot of ego shooters like csgo: <a href="https://steamcommunity.com/profiles/76561198997658790/">my steam</a>. Tune into my favorite <a href="http://phrl42.ydns.eu:8000/eurobeat">radio station.</a>
+</body>
+</html>
