--- a/buttons.html
+++ b/buttons.html
@@ -5,7 +5,17 @@
          <title>Website</title>
       </head>
       <body>
-         <button name ="simple_button" type="button">
+         <header>
+             <table cellspacing="6" cellpadding="6">
+               <tr>
+                   <td><a href="index.html">Home</a></td>
+      				<td><a href="About.html"> About Me</a></td>
+      				<td><a href="F.html"> Friends</a></td>
+      				<td><a href="blogs.html">Blog</a></td>
+                   <td><a href="buttons.html"Buttons</a></td>
+                 </tr>
+             </table>
+          <button name ="simple_button" type="button">
             Click me :)
          </button>
          <button name ="submit_button" type="submit" value="Submit">
