--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       		<td><a href="About.html">About Me</a></td>
       		<td><a href="F.html">Friends</td></a>
       		<td><a href="blogs.html">Blogs</a></td>
+            <td><a href="buttons.html"Buttons</a></td>
       	  </tr>
         </tr>
       <hr>
