--- a/F.html
+++ b/F.html
@@ -11,6 +11,7 @@
     		<td><a href="About.html">About</a></td>
     		<td><a href="F.html">Friends</a></td>
     		<td><a href="blogs.html">Blogs</a></td>
+		<td><a href="buttons.html"Buttons</a></td>
     	</tr>
     </header>
     <hr>
