--- a/buttons.html
+++ b/buttons.html
@@ -12,7 +12,7 @@
       				<td><a href="About.html"> About Me</a></td>
       				<td><a href="F.html"> Friends</a></td>
       				<td><a href="blogs.html">Blog</a></td>
-                   <td><a href="buttons.html"Buttons</a></td>
+                   <td><a href="buttons.html">Buttons</a></td>
                  </tr>
              </table>
           <button name ="simple_button" type="button">
