--- a/About.html
+++ b/About.html
@@ -18,6 +18,6 @@
    <table cellspacing="6" cellpadding="6"></table>
    </table>
   <h1>About Me</h1>
-  I'm JaLoal and I'm one of million people on the internet. I play a lot of ego shooters like csgo: <a href="https://steamcommunity.com/profiles/76561198997658790/" target=blank>my steam</a>. Tune into my favorite <a href="http://phrl42.ydns.eu:8000/eurobeat" target=blank>radio station.</a>
+  <p>I'm JaLoal and I'm one of million people on the internet. I play a lot of ego shooters like csgo: <a href="https://steamcommunity.com/profiles/76561198997658790/" target=blank>my steam</a>. Tune into my favorite <a href="http://phrl42.ydns.eu:8000/eurobeat" target=blank>radio station.</a></p>
 </body>
 </html>
