--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <title>Website</title>
+        <b><title>Website</title></b>
           <link href="style.css" rel="stylesheet" type="text/css" media="all">
     </head>
       <body>
