--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <b><title>Website</title></b>
+        <title>Website</title>
           <link href="style.css" rel="stylesheet" type="text/css" media="all">
     </head>
       <body>
@@ -19,7 +19,7 @@
       	 <table cellspacing="6" cellpadding="6"></table>
         </table>
     </nav>
-      <h1>Welcome Kamerad</h1>
+<b><h1>Welcome Kamerad</h1></b>
       Welcome to my website. Here I will write blogs. I made the website only because of <a href="http://phrl42.ydns.eu/index.html" target = blank>phrl42.</a></td>
       </body>
 </html>
