--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       	 <table cellspacing="6" cellpadding="6"></table>
         </table>
     </nav>
-<b><h1>Welcome Kamerad</h1></b>
+<h1>Welcome Kamerad</h1>
       Welcome to my website. Here I will write blogs. I made the website only because of <a href="http://phrl42.ydns.eu/index.html" target = blank>phrl42.</a></td>
       </body>
 </html>
