--- a/buttons.html
+++ b/buttons.html
@@ -51,6 +51,10 @@
         <a href="http://phrl42.ydns.eu/index.html" target=blank>
          <button>
             phrl42
+          </button>
+            <br><br>
+            <a href="http://phrl42.ydns.eu/index.html" target=blank>
+                
          </button>
    </body>
 </html>
