--- a/buttons.html
+++ b/buttons.html
@@ -53,8 +53,11 @@
             phrl42
           </button>
             <br><br>
-            <a href="http://phrl42.ydns.eu/index.html" target=blank>
-                
+            <a href="phrl42.ydns.eu/index.html" target=blank>
+          <button>
+                <br><br>
+                <a href="http://gutsche42.de/index.html" target=blank>
+                </button>
          </button>
    </body>
 </html>
