--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        link rel=icon type=imagepng href=imgcon.png
+        link rel=icon type=imagepng href=chrizz7.png
         <title>Website</title>
           <link href="style.css" rel="stylesheet" type="text/css" media="all">
     </head>
