--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Website</title>
           <link href="style.css" rel="stylesheet" type="text/css" media="all">
     </head>
-    <link rel=icon type=imagepng href=chrizz7.png>
+    <link rel="icon" type="image/png" href="/img/chrizz7.png">
       <body>
       	<header>
       	  <tr>
