--- a/F.html
+++ b/F.html
@@ -17,7 +17,7 @@
     <hr>
     <table cellspacing="6" cellpadding="6"></table>
     <h1>Friends</h1>
-	<p>Take a look at these great websites</p>
+	<p>Take a look at these great websites: </p>
        <p><a href="https://rnbunker.neocities.org/" target =blank>rnbunker</p></a>
        <p><a href="https://abbix.me" target=blank>Abbix</a></p>
        <p><a href="http://phrl42.ydns.eu/index.html" target=blank>phrl42</a></p>
